<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="xyz.farshad.vocab.activity.WordPagerActivity">
    <item
        android:id="@+id/sound_off"
        android:orderInCategory="100"
        android:title="@string/sound_off"
        app:showAsAction="never" />
    <item
        android:id="@+id/sound_on"
        android:orderInCategory="100"
        android:title="@string/sound_on"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/increase_speed"
        android:orderInCategory="100"
        android:title="@string/increase_speed"
        app:showAsAction="never" />
    <item
        android:id="@+id/decrease_speed"
        android:orderInCategory="100"
        android:title="@string/decrease_speed"
        app:showAsAction="never" />
</menu>
