<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/icon_book"
                android:id="@+id/bookTextView"
                android:textSize="25sp"
                android:layout_marginTop="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Category"
                android:id="@+id/catTextView"
                android:layout_margin="10dp"
                android:layout_marginTop="0dp"
                android:textSize="17sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/categoryEditText"
                android:layout_weight="0.38"
                android:enabled="true"
                android:visibility="gone"
                android:layout_marginTop="0dp"
                android:editable="true"
                android:singleLine="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="50"
                android:id="@+id/countTextView"
                android:layout_margin="0dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/words"
                android:id="@+id/textView2"
                android:layout_margin="6dp"
                android:layout_marginTop="0dp"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_pencil"
                android:id="@+id/edit"
                android:background="#00000000"
                android:gravity="center_vertical|right"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_check_circle"
                android:id="@+id/submitEditButton"
                android:background="#00000000"
                android:visibility="gone"
                android:gravity="center_vertical|right"
                android:textColor="#40bf65"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
